<resources tools:ignore="MissingTranslation" android:locale="languageCode" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <string name="refresh_header_pulling">Pull down to refresh</string>
    <string name="refresh_header_refreshing">Refreshing</string>
    <string name="refresh_header_loading">Loading</string>
    <string name="refresh_header_release">Release and refresh immediately</string>
    <string name="refresh_header_finish">Refresh completed</string>
    <string name="refresh_header_failed">Refresh failed</string>
    <string name="refresh_header_update">Last update M-d HH:mm</string>
    <string name="refresh_footer_pulling">Load more</string>
    <string name="refresh_footer_release">Release and load immediately</string>
    <string name="refresh_footer_loading">Loading</string>
    <string name="refresh_footer_refreshing">Refreshing</string>
    <string name="refresh_footer_finish">Loading completed</string>
    <string name="refresh_footer_failed">Load failed</string>
    <string name="refresh_footer_nothing">No more data</string>
    <string name="black">Blacklist</string>
    <string name="black_ing">Cancel blacklist</string>
    <string name="cash_input_wx_account">Please enter WeChat account</string>
    <string name="cash_input_ali_account">Please enter Alipay account</string>
    <string name="cash_input_ali_name">Please enter Alipay account name</string>
    <string name="cash_type_ali">Alipay</string>
    <string name="cash_type_wx">WeChat</string>
    <string name="cash_type_bank">Bank card</string>
    <string name="cash_delete">Do you want to delete this account? </string>
    <string name="cash_record">Withdrawal record</string>
    <string name="coin_give">Giveaway</string>
    <string name="coin_balance">Account balance</string>
    <string name="coin_balance_2">Balance:</string>
    <string name="coin_pay_ali">Alipay</string>
    <string name="coin_pay_wx">WeChat Pay</string>
    <string name="coin_pay_pp">Paypal payment</string>
    <string name="coin_charge_success">Recharge successful</string>
    <string name="coin_charge_failed">Recharge failed</string>
    <string name="coin_ali_not_install">Alipay not installed</string>
    <string name="coin_wx_not_install">WeChat not installed</string>
    <string name="copy_link">Copy link</string>
    <string name="copy_success">Copy successful</string>
    <string name="home_page">Home page</string>
    <string name="home_page_share_1">"%1$s" is also in %2$s, ~ click to view his story</string>
    <string name="home_page_share_2">He has %1$s fans, come and watch! </string>
    <string name="im_live_anchor_msg">Hi~ I am the anchor, come and chat with me. </string>
    <string name="im_type_image">[Image]</string>
    <string name="im_type_voide">[Voice]</string>
    <string name="im_type_location">[Location]</string>
    <string name="live_shop_open">Open shopping cart</string>
    <string name="live_shop_close">Close shopping cart</string>
    <string name="goods_add_taobao">Taobao products</string>
    <string name="goods_add_xcx">Mall applet</string>
    <string name="goods_tip_1">Product link (you can paste the Taobao store product link)</string>
    <string name="goods_tip_2">Product name (up to 20 characters can be entered)</string>
    <string name="goods_tip_3">Original price</string>
    <string name="goods_tip_4">Current price</string>
    <string name="goods_tip_5">Confirm to add the product</string>
    <string name="goods_tip_6">Product introduction (up to 50 characters can be entered)</string>
    <string name="goods_tip_7">Product image</string>
    <string name="goods_tip_8">View times: %1$s times</string>
    <string name="goods_tip_9">(Enter the corresponding ID of the product in the mini program, and the product information will be automatically obtained)</string>
    <string name="goods_tip_10">Product name</string>
    <string name="goods_tip_11">Product introduction</string>
    <string name="goods_tip_12">Product ID</string>
    <string name="goods_tip_13">Get product information</string>
    <string name="goods_tip_14">View the same product</string>
    <string name="goods_tip_16">Invalid advertising link</string>
    <string name="goods_tip_17">Products on sale</string>
    <string name="goods_tip_18">Go to buy</string>
    <string name="goods_tip_19">No products are currently on sale</string>
    <string name="goods_tip_20">All products </string>
    <string name="goods_tip_21">Add products</string>
    <string name="goods_tip_22">Remove</string>
    <string name="goods_tip_23">No products are currently on sale\nClick the upper right corner to add products to the shopping cart</string>
    <string name="goods_tip_24">Please enter the product name</string>
    <string name="goods_tip_25">No products are currently on sale\nPlease go to the store to add products first</string>
    <string name="goods_tip_26">Products on sale </string>
    <string name="goods_tip_27">Go to the store and browse</string>
    <string name="goods_tip_28">Recommended products</string>
    <string name="goods_tip_29">Go to buy</string>
    <string name="goods_tip_30">Remove from shelf</string>
    <string name="goods_tip_31">Related products</string>
    <string name="goods_tip_32">View the same product</string>
    <string name="goods_tip_33">Re-list</string>
    <string name="goods_tip_34"> After deletion, this product will no longer be displayed in the store\nAre you sure you want to delete this product? </string>
    <string name="goods_tip_35"> After removal, users will not be able to purchase this product\nAre you sure you want to remove this product? </string>
    <string name="goods_tip_36">Please enter the product ID</string>
    <string name="goods_tip_37">Manage to remove from shelves</string>
    <string name="goods_tip_38">Removed from shelves</string>
    <string name="goods_tip_39">On sale (%1$s)</string>
    <string name="goods_un_saled">Removed from shelves</string>
    <string name="live_send_gift">Gift</string>
    <string name="live_send_gift_4">Backpack</string>
    <string name="live_send_gift_5">Props</string>
    <string name="live_send_gift_1">Send</string>
    <string name="live_send_gift_2">Pieces</string>
    <string name="live_send_gift_3">Sent one</string>
    <string name="live_gift_send">Gift</string>
    <string name="live_gift_send_lian">Live gift</string>
    <string name="live_gift_send_lian_2">x</string>
    <string name="live_gift_send_lian_3">Send x</string>
    <string name="im_input_gift">Gift</string>
    <string name="im_input_location">Location</string>
    <string name="im_choose_image">Choose image</string>
    <string name="im_no_image">No image found</string>
    <string name="im_please_choose_image">Please select an image</string>
    <string name="im_search_location">Search location</string>
    <string name="im_location_failed">No location information obtained</string>
    <string name="im_map_not_loaded">Map not loaded</string>
    <string name="im_address_failed">No address obtained</string>
    <string name="im_get_location_failed">Failed to obtain location</string>
    <string name="im_follow_tip">Click to follow, you can see the other party\'s dynamics in time</string>
    <string name="im_press_say">Press and hold to speak</string>
    <string name="im_unpress_stop">Release to end</string>
    <string name="im_please_say">Please speak...</string>
    <string name="im_record_audio_too_short">Recording time is too short</string>
    <string name="im_no_sys_msg">No system message</string>
    <string name="im_pri_chat">Private chat</string>
    <string name="im_charge_send">Pay to send</string>
    <string name="img_camera_cancel">Cancel photo</string>
    <string name="img_alumb_cancel">Cancel selection</string>
    <string name="img_crop_cancel">Cancel cropping</string>
    <string name="live_share_to">Share to</string>
    <string name="main_home">Home</string>
    <string name="project_center">My Courses</string>
    <string name="main_me">Personal Center</string>
    <string name="main_maintain_notice">Maintenance Notice</string>
    <string name="main_input_invatation_code">Please fill in the invitation code</string>
    <string name="main_click_next_exit">Press again to exit</string>
    <string name="mob_phone">Mobile</string>
    <string name="mob_qq">QQ</string>
    <string name="mob_qzone">QQ Space</string>
    <string name="mob_wx">WeChat</string>
    <string name="mob_wx_pyq">Friends Circle</string>
    <string name="mob_fb">Facebook</string>
    <string name="mob_tt">Twitter</string>
    <string name="permission_storage_refused">You have denied the permission to read and write files, please change it in settings</string>
    <string name="permission_camera_refused">You have denied the permission to use the camera, please change it in settings</string>
    <string name="permission_record_audio_refused">You have denied the permission to use the microphone, please change it in settings</string>
    <string name="permission_location_refused">You have denied the permission to use positioning, please change it in settings</string>
    <string name="permission_read_phone_state_refused">You have denied the permission to read mobile phone information, please change it in settings</string>
    <string name="profit">My income</string>
    <string name="setting">Settings</string>
    <string name="setting_exit">Exit account</string>
    <string name="setting_clear_cache_ing">Clearing</string>
    <string name="setting_clear_cache">Successful cache clearing</string>
    <string name="setting_clear_cache_2">Cache clearing</string>
    <string name="search">Search</string>
    <string name="search_hint">Please enter the nickname or ID to search</string>
    <string name="search_no_data">No relevant content found</string>
    <string name="share_type_qq">QQ</string>
    <string name="share_type_qzone">QQ space</string>
    <string name="share_type_wx">WeChat</string>
    <string name="share_type_wxpyq">Friends circle</string>
    <string name="share_type_facebook">facebook</string>
    <string name="share_type_twitter">twitter</string>
    <string name="share_success">Shared successfully</string>
    <string name="min_advance_money">Minimum withdrawal amount %1$s</string>
    <string name="str_classfiy">Classification</string>
    <string name="str_find">Discover</string>
    <string name="str_shop_cart">Shopping Cart</string>
    <string name="str__mine">My</string>
    <string name="str_card_tip0">Cardholder</string>
    <string name="str_card_tip1">Please enter the cardholder\'s name</string>
    <string name="str_card_konw">Card number</string>
    <string name="str__card_input_num">Please enter the card number</string>
    <string name="str_bank">Bank</string>
    <string name="str_bank_tip1">Please select a bank</string>
    <string name="str_tixian">Withdraw</string>
    <string name="str_order_1">Received</string>
    <string name="str_order_2">Completed</string>
    <string name="str_order_3">Refund</string>
    <string name="str_auth_1">Store owner information</string>
    <string name="str_auth_2">Name</string>
    <string name="sstr_auth_3">Mobile number</string>
    <string name="str_auth_3">ID number</string>
    <string name="str_auth_4">Front photo of ID card</string>
    <string name="str_auth_5">Back photo of ID card</string>
    <string name="str_auth_6">Holding ID card photo</string>
    <string name="str_auth_7">Qualification certificate</string>
    <string name="str_auth_8">Business license</string>
    <string name="str_auth_9">License</string>
    <string name="str_auth_10">Other certificates</string>
    <string name="str_auth_11">Submit</string>
    <string name="str_search_1">History Search</string>
    <string name="str_search_2">History Search</string>
    <string name="str_search_3">Hot Search</string>
</resources>