<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/default_padding"
    android:paddingRight="@dimen/default_padding"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:textColor="@color/textColor"
            android:text="@string/str_card_tip0"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_14"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textColorHint="@color/textColor2"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size_13"
            android:hint="@string/str_card_tip1"
            android:id="@+id/tv_user_name"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray3"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:textColor="@color/textColor"
            android:text="@string/str_card_konw"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_14"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textColorHint="@color/textColor2"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size_13"
            android:hint="@string/str__card_input_num"
            android:inputType="number"
            android:id="@+id/tv_card_num"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray3"
        /> <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    >
    <TextView
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:textColor="@color/textColor"
        android:text="@string/str_bank"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_size_14"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:textColorHint="@color/textColor2"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_13"
        android:hint="@string/str_bank_tip1"
        android:gravity="center_vertical"
        android:id="@+id/tv_bank"
        />
</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray3"
        /> <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    >
    <TextView
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:textColor="@color/textColor"
        android:text="@string/str_tixian"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_size_14"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:textColorHint="@color/textColor2"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_13"
        android:hint="@string/min_advance_money"
        android:inputType="numberDecimal"
        android:id="@+id/tv_advance_money"
        />

</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray3"
        />

</LinearLayout>
