<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/default_padding"
        android:textSize="@dimen/text_size_14"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/str_order_1"
        android:id="@+id/btn1"

        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/default_padding"
        android:textSize="@dimen/text_size_14"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/str_order_2"
        android:id="@+id/btn2"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/default_padding"
        android:textSize="@dimen/text_size_14"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/str_order_3"
        android:id="@+id/btn3"
        />


</LinearLayout>
