<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/str_auth_1"
                android:gravity="center_vertical"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_15"
                android:textStyle="bold"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/str_auth_2"
                android:textColorHint="@color/gray3"
                android:textColor="@color/textColor"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size_14"
                android:background="@null"
                android:id="@+id/et_name"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"

                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line_color"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/sstr_auth_3"
                android:textColorHint="@color/gray3"
                android:textColor="@color/textColor"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size_14"
                android:background="@null"
                android:id="@+id/et_phone"
                android:inputType="number"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line_color"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/str_auth_3"
                android:textColorHint="@color/gray3"
                android:textColor="@color/textColor"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size_14"
                android:background="@null"
                android:id="@+id/et_user_code"
                android:inputType="text"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line_color"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:layout_marginTop="20dp"
                >
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    >
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="75dp"
                        android:src="@drawable/icon_ready_add"
                        android:background="#FAFAFA"
                        android:scaleType="centerCrop"
                        android:id="@+id/img_code_before"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_auth_4"
                        android:textColor="@color/textColor2"
                        android:textSize="@dimen/text_size_12"
                        android:layout_marginTop="12dp"
                        />
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    >
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="75dp"
                        android:src="@drawable/icon_ready_add"
                        android:background="#FAFAFA"
                        android:scaleType="centerCrop"
                        android:id="@+id/img_code_backgound"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_auth_5"
                        android:textColor="@color/textColor2"
                        android:textSize="@dimen/text_size_12"
                        android:layout_marginTop="12dp"
                        />

                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    >
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="75dp"
                        android:src="@drawable/icon_ready_add"
                        android:background="#FAFAFA"
                        android:scaleType="centerCrop"
                        android:id="@+id/img_code_hand"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_auth_6"
                        android:textColor="@color/textColor2"
                        android:textSize="@dimen/text_size_12"
                        android:layout_marginTop="12dp"
                        />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/line_color"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/str_auth_7"
                android:gravity="center_vertical"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_15"
                android:textStyle="bold"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                >
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    >
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="75dp"
                        android:src="@drawable/icon_ready_add"
                        android:background="#FAFAFA"
                        android:scaleType="centerCrop"
                        android:id="@+id/img_business_license"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_auth_8"
                        android:textColor="@color/textColor2"
                        android:textSize="@dimen/text_size_12"
                        android:layout_marginTop="12dp"
                        />

                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    >
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="75dp"
                        android:src="@drawable/icon_ready_add"
                        android:background="#FAFAFA"
                        android:scaleType="centerCrop"
                        android:id="@+id/img_licence"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_auth_9"
                        android:textColor="@color/textColor2"
                        android:textSize="@dimen/text_size_12"
                        android:layout_marginTop="12dp"
                        />

                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    >
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="75dp"
                        android:src="@drawable/icon_ready_add"
                        android:background="#FAFAFA"
                        android:scaleType="centerCrop"
                        android:id="@+id/img_onther_document"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_auth_10"
                        android:textColor="@color/textColor2"
                        android:textSize="@dimen/text_size_12"
                        android:layout_marginTop="12dp"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button style="@style/default_bottom_button"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/str_auth_11"
        android:id="@+id/btn_commit"
        />

</LinearLayout>
