<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingTop="@dimen/default_padding"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="@dimen/default_padding"
        >
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/container"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="取消"
            android:textColor="@color/textColor"
            android:gravity="right|center_vertical"
            android:id="@+id/tv_search"
            android:paddingLeft="10dp"
            android:textSize="@dimen/text_size_14"
            />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/str_search_1"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="@dimen/default_margin"
        android:paddingLeft="@dimen/default_padding"
        android:textColor="@color/textColor"
        android:paddingRight="@dimen/default_padding"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/str_search_2"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="@dimen/default_margin"
        android:paddingLeft="@dimen/default_padding"
        android:textColor="@color/textColor"
        android:paddingRight="@dimen/default_padding"
        android:textStyle="bold"
        />



    <com.wanyue.shop.view.widet.linear.ListFlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_history"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/str_search_3"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="@dimen/default_margin"
        android:paddingLeft="@dimen/default_padding"
        android:textColor="@color/textColor"
        android:paddingRight="@dimen/default_padding"
        android:textStyle="bold"
        />

  <com.wanyue.shop.view.widet.linear.ListFlexboxLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/list_hot"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:paddingLeft="@dimen/default_padding"
      android:paddingRight="@dimen/default_padding"
      />



</LinearLayout>
